<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hartmms.bbq.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_chart"
        android:orderInCategory="100"
        android:title="@string/clear_chart"
        app:showAsAction="never" />
<!--
    <item
        android:id="@+id/dummy_data"
        android:orderInCategory="100"
        android:title="@string/dummy_data"
        app:showAsAction="never" />
-->
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>
